# aadk

./: .gitignore  Makefile  pyproject.toml
.notebooks/: airxiv_scraper.ipynb
agents/a2a_agent/: agent.py
agents/a2a_agent/remote_a2a/check_prime_agent/: agent.py  go.mod  go.sum  main.go
agents/arxiv_agent/: __init__.py  agent.py
agents/arxiv_agent/sub_agents/arxiv_agent/: agent.py
agents/arxiv_agent/sub_agents/arxiv_agent/tools/: __init__.py  search_paper_tool.py
agents/arxiv_agent/sub_agents/reviewer_agent/: __init__.py  agent.py
agents/arxiv_agent/sub_agents/reviewer_agent/tools/: review_paper_tool.py
agents/bq_agent/: agent.py  agent_config.py
agents/bq_agent/tools/: __init__.py  phone_grading_tool.py
agents/mcp_agent/: agent.py  mcp_config.py
agents/sustainability_research_agent/: agent.py
shared/: config.py
